Update rainbow.html audio file to mp3
wav file was too large

--- a/rainbow.html
+++ b/rainbow.html
@@ -149,27 +149,12 @@
 		
 			<div id="goldpot-audio-div">		
 				<audio
-					src="media/puttin-on-the-ritz.wav"
+					src="media/ritz.mp3"
 					autoplay controls loop>
 					<p>Puttin' on the Ritz by Taco</p>
 					</audio>
 			</div>
-						
-<!--		<ol>
-			<li>Bernard Arnault Family, $231B</li>
-			<li>Elon Musk, $208B</li>
-			<li>Jeff Bezos, $195B</li>
-			<li>Mark Zuckerberg, $171B</li>
-			<li>Larry Ellison, $139B</li>
-			<li>Warren Buffet, $134B</li>
-			<li>Bill Gates, $127B</li>
-			<li>Steve Ballmer, $121B</li>
-			<li>Larry Page, $116B</li>
-			<li>Mukesh Ambani, $114B</li>
-		</ol>	
--->
 
-		
 <!-- InstanceEndEditable -->
 	</main>
 	<br>
