Update chillzone.html audio file to mp3
wav file was too large

--- a/chillzone.html
+++ b/chillzone.html
@@ -35,7 +35,7 @@
 
 			<div id="ww-audio-div">
 				<audio
-					src="media/winter-wonderland.wav"
+					src="media/winter-wonder.mp3"
 					autoplay controls loop>
 					<p>Winter Wonderland by Bing Crosby</p>
 					</audio>
