--- a/contact.html
+++ b/contact.html
@@ -67,10 +67,17 @@
 					<textarea rows="6" cols="43" id="message" placeholder="type your message here" required></textarea>
 				</p>
 				
-				<label id="checkbox-label"><input type="checkbox" name="subscribe" required /> I understand that no one will save me.</label>
+				<div id="checkboxes-div">
+				<label class="checkbox-label"><input type="checkbox" name="subscribe" required /> I understand that no one will save me.</label>
+				</div>
 				<br>
 				<br>
-				<input class="button" type="submit" value="submit"/> 
+			
+				<!-- SUBMIT BUTTON TEMPORARILY DISABLED, using link instead ...
+				<input class="submit-button" type="submit" value="send"/> ----->
+				<div class="submit-button">
+					<a href="404.html">submit</a>
+					</div> 
 				<br>
 				<br>
 			</fieldset>
