--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@
 <!-- InstanceBeginEditable name="main" -->
 			
 			<div class="yellow-brick">
+				<a href="fool.html"><h2>Fool on the Hill</h2></a>
+				<p style="color:darkgray">Animation Meditation...</p>
+				</div>
+		
+		<div class="yellow-brick">
+				<a href="https://mplataj.github.io/tarot-thyme" target="_blank"><h2>Tarot in Thyme</h2></a>
+				<p style="color: forestgreen">Shop website redesign...</p>
+				</div>
+		
+		
+			<div class="yellow-brick">
 				<a href="chillzone.html"><h2>Chill Zone</h2></a>
 				<p style="color:aqua">Tell Santa about it...</p>
 				</div>
@@ -51,6 +62,11 @@
 				<a href="luna.html"><h2>Lunar Catz</h2></a>
 				<p style="color:slateblue">Have a purrfect New Year...</p>
 				</div>
+		
+			<div class="yellow-brick">
+					<a href="https://mplataj.github.io/planet6382" target="_blank"><h2>Planet 6382</h2></a>
+					<p style="color: chartreuse">HTML &amp; CSS Cyberspace Guide...</p>
+					</div>
 			
 		
 <!-- InstanceEndEditable -->
