--- a/index.html
+++ b/index.html
@@ -31,17 +31,16 @@
 	
 	<main>
 <!-- InstanceBeginEditable name="main" -->
-			
+<!---- 
 			<div class="yellow-brick">
 				<a href="fool.html"><h2>Fool on the Hill</h2></a>
 				<p style="color:darkgray">Animation Meditation...</p>
 				</div>
-		
+---->
 		<div class="yellow-brick">
-				<a href="https://mplataj.github.io/tarot-thyme" target="_blank"><h2>Tarot in Thyme</h2></a>
-				<p style="color: forestgreen">Shop website redesign...</p>
+				<a href="sorting.html" target="_blank"><h2>Just Getting Sorted</h2></a>
+				<p style="color:lightgray">Where to begin ...</p>
 				</div>
-		
 		
 			<div class="yellow-brick">
 				<a href="chillzone.html"><h2>Chill Zone</h2></a>
