--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				</div>
 ---->
 		<div class="yellow-brick">
-				<a href="sorting.html" target="_blank"><h2>Just Getting Sorted</h2></a>
+				<a href="sorting.html"><h2>Just Getting Sorted</h2></a>
 				<p style="color:lightgray">Where to begin ...</p>
 				</div>
 		
